# TwilightPrincessDebugMenu

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Romhack.toml  USAGE.md  patch.sh
libtp/: Cargo.toml
libtp/src/: addrs.rs  lib.rs
libtp/src/game/: controller.rs
libtp/src/system/: libc.rs  mod.rs  mutex.rs  tp.rs
src/: alert.rs  card.rs  cheat_menu.rs  commands.rs  controller.rs  lib.rs  main_menu.rs  memory.rs  menu.rs  patch.asm  popups.rs  print.rs  settings.rs  utils.rs
src/inventory/: amounts.rs  equipment.rs  main.rs  mod.rs  quest.rs
src/warping/: main.rs  mod.rs  statics.rs
src/warping/statics/: cave.rs  dungeon.rs  interior.rs  mod.rs  overworld.rs
