[package]
name = "tp-example"
version = "0.1.0"
authors = ["Cris Hall-Ramos <crishallramos@yahoo.com>"]

[lib]
name = "rust"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
gcn-fonts = { git = "https://github.com/hallcristobal/gcn-fonts", rev = "c0109dbc59ac8fa7100b71fa5bd5d7ed0f26ff3f" }
