[package]
name = "tp-example"
version = "0.1.0"
authors = ["Cris Hall-Ramos <crishallramos@yahoo.com>"]

[lib]
name = "rust"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = false

[dependencies]
arrayvec = { version = "0.4.7", default-features = false, features = ["serde-1"] }
lazy_static = { version = "1.0.1", features=["spin_no_std"] }
libtp = { path = "libtp" }
gcn-fonts = { git = "https://github.com/hallcristobal/gcn-fonts", rev = "c0109dbc59ac8fa7100b71fa5bd5d7ed0f26ff3f" }
gcn = { git = "https://github.com/CryZe/gcn", rev = "e0055c4d9068ffcebe496517ac925887a3b6be08", features=["serialize"] }
bincode = { git = "https://github.com/CryZe/bincode", branch = "core" }
serde = { version = "1.0.75", default-features = false }
serde_derive = { version = "1.0.75", default-features = false }

[dev-dependencies]
proc-macro2 = "=0.4.12"
